--- a/.github/workflows/.github/workflows/deploy.yml
+++ b/.github/workflows/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Vite React App to GitHub Pages
 on:
   push:
     branches:
-      - main  # ou master selon ta branche
+      - main  # ta branche principale
 
 jobs:
   build-deploy:
@@ -22,6 +22,9 @@ jobs:
 
     - name: Build project
       run: npm run build
+
+    - name: Create 404.html for SPA routing
+      run: cp dist/index.html dist/404.html
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
