--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-   "deploy": "gh-pages -d dist --repo https://$GITHUB_ACTOR:${GITHUB_TOKEN}@github.com/acaron21/pum_help.git"
-
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -35,6 +32,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
-    
+
   }
 }
