--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "jspdf": "^3.0.3",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-barcode": "^1.6.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/jspdf": "^1.3.3",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
